force-app/main/default/objects/Account/fields/Account_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Count__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>