force-app/main/default/objects/Account/fields/Account_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Account_Refresh__c</fullName>
    <description>Date of the most recent Account Refresh</description>
    <inlineHelpText>Should be updated only when you have a conversation/meeting with one or more of the Account Primary Contacts.</inlineHelpText>
    <label>Account Refresh</label>
    <type>Date</type>
</CustomField>