force-app/main/default/objects/Account/fields/Acq_Preference__c.field-meta.xml
<CustomField>
    <fullName>Acq_Preference__c</fullName>
    <label>Acq Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NPL</fullName>
            </value>
            <value>
                <fullName>Performing</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>CRE</fullName>
            </value>
            <value>
                <fullName>Unsecured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>