force-app/main/default/objects/Account/fields/Agency_Deals_Year__c.field-meta.xml
<CustomField>
    <fullName>Agency_Deals_Year__c</fullName>
    <label>Agency Deals/Year</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>