force-app/main/default/objects/Account/fields/Allocated__c.field-meta.xml
<CustomField>
    <fullName>Allocated__c</fullName>
    <label>Allocated</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Number of allocated deals for the account</description>
</CustomField>