force-app/main/default/objects/Account/fields/Annual_Revenue_Est__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Est__c</fullName>
    <description>For forecasting purposes</description>
    <label>Annual Revenue Est.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>