force-app/main/default/objects/Account/fields/Avg_Participants__c.field-meta.xml
<CustomField>
    <fullName>Avg_Participants__c</fullName>
    <label>Avg Participants</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>