force-app/main/default/objects/Account/fields/Bank_Size_Rank__c.field-meta.xml
<CustomField>
    <fullName>Bank_Size_Rank__c</fullName>
    <label>Bank Size Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>