force-app/main/default/objects/Account/fields/CECL_Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>CECL_Implementation_Date__c</fullName>
    <label>CECL Implementation Date</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>