force-app/main/default/objects/Account/fields/Count_of_Opportunities_with_Products__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Opportunities_with_Products__c</fullName>
    <label>Count of Opportunities with Products</label>
    <summaryFilterItems>
        <field>Opportunity.Count_of_Line_Items__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>