force-app/main/default/objects/Account/fields/CRE_Loans__c.field-meta.xml
<CustomField>
    <fullName>CRE_Loans__c</fullName>
    <label>CRE Loans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>