force-app/main/default/objects/Account/fields/Current_Merger__c.field-meta.xml
<CustomField>
    <fullName>Current_Merger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Merger</label>
    <type>Checkbox</type>
</CustomField>