force-app/main/default/objects/Account/fields/Current_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Current_Vendor__c</fullName>
    <description>Incumbent vendors</description>
    <label>Current Vendor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nothing Installed</fullName>
            </value>
            <value>
                <fullName>DebtX</fullName>
            </value>
            <value>
                <fullName>IntraLinks</fullName>
            </value>
            <value>
                <fullName>SyndTrak</fullName>
            </value>
            <value>
                <fullName>DebtDomain</fullName>
            </value>
            <value>
                <fullName>LoanStream</fullName>
            </value>
            <value>
                <fullName>Participate</fullName>
            </value>
            <value>
                <fullName>Synply</fullName>
            </value>
            <value>
                <fullName>Sharefile</fullName>
            </value>
            <value>
                <fullName>Secure Email</fullName>
            </value>
            <value>
                <fullName>ACBS</fullName>
            </value>
            <value>
                <fullName>LoanIQ</fullName>
            </value>
            <value>
                <fullName>AFS Vision</fullName>
            </value>
            <value>
                <fullName>Jack Henry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>