force-app/main/default/objects/Account/fields/Customer_Health__c.field-meta.xml
<CustomField>
    <fullName>Customer_Health__c</fullName>
    <label>Customer Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <color>#009900</color>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <color>#FFFF66</color>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Flashing Red</fullName>
                <color>#FF6666</color>
                <label>Flashing Red</label>
            </value>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>