force-app/main/default/objects/Account/fields/Deals_Year__c.field-meta.xml
<CustomField>
    <fullName>Deals_Year__c</fullName>
    <label>Deals/Year</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>