force-app/main/default/objects/Account/fields/Debt_Domain_notice__c.field-meta.xml
<CustomField>
    <fullName>Debt_Domain_notice__c</fullName>
    <label>Debt Domain notice</label>
    <type>Date</type>
</CustomField>