force-app/main/default/objects/Account/fields/DebtX_Seller__c.field-meta.xml
<CustomField>
    <fullName>DebtX_Seller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DebtX Seller?</label>
    <type>Checkbox</type>
</CustomField>