force-app/main/default/objects/Account/fields/Declined_Pass__c.field-meta.xml
<CustomField>
    <fullName>Declined_Pass__c</fullName>
    <label>Declined/Pass</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Number of deals the account has declined or passed on</description>
</CustomField>