force-app/main/default/objects/Account/fields/Distinct_Client_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Distinct_Client_Relationships__c</fullName>
    <label>Distinct Client Relationships</label>
    <summaryForeignKey>Syndication_Participation__c.Participating_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>