force-app/main/default/objects/Account/fields/DX_Notice__c.field-meta.xml
<CustomField>
    <fullName>DX_Notice__c</fullName>
    <description>Notice date for DX Open contracts</description>
    <label>DXProduct Notice</label>
    <type>Date</type>
</CustomField>