force-app/main/default/objects/Account/fields/DXOpen_25__c.field-meta.xml
<CustomField>
    <fullName>DXOpen_25__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Targeted Top 25 accounts for DXOpen</description>
    <label>DXOpen 25</label>
    <type>Checkbox</type>
</CustomField>