force-app/main/default/objects/Account/fields/DXProduct__c.field-meta.xml
<CustomField>
    <fullName>DXProduct__c</fullName>
    <label>DXProduct</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DXSyndicate</fullName>
            </value>
            <value>
                <fullName>DXDocs</fullName>
            </value>
            <value>
                <fullName>DXOpen</fullName>
            </value>
            <value>
                <fullName>DXParticipate</fullName>
            </value>
            <value>
                <fullName>DXAgency</fullName>
            </value>
            <value>
                <fullName>DXCompliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>