force-app/main/default/objects/Account/fields/DXProduct_exp__c.field-meta.xml
<CustomField>
    <fullName>DXProduct_exp__c</fullName>
    <description>DXProduct expiration date</description>
    <label>DXProduct exp</label>
    <type>Date</type>
</CustomField>