force-app/main/default/objects/Account/fields/FDIC_Acquirer__c.field-meta.xml
<CustomField>
    <fullName>FDIC_Acquirer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has acquired loss share bank</description>
    <label>FDIC Acquirer</label>
    <type>Checkbox</type>
</CustomField>