force-app/main/default/objects/Account/fields/FDIC_Cert_Number__c.field-meta.xml
<CustomField>
    <fullName>FDIC_Cert_Number__c</fullName>
    <label>FDIC Cert Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>