force-app/main/default/objects/Account/fields/Geog_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Geog_Preferences__c</fullName>
    <label>Geog Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Spain</fullName>
            </value>
            <value>
                <fullName>Italy</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>