force-app/main/default/objects/Account/fields/In_Deals__c.field-meta.xml
<CustomField>
    <fullName>In_Deals__c</fullName>
    <label>In Deals</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Number of deals the account is currently participating in</description>
</CustomField>