force-app/main/default/objects/Account/fields/Intralinks_exp__c.field-meta.xml
<CustomField>
    <fullName>Intralinks_exp__c</fullName>
    <description>Intralinks contract expiration</description>
    <label>Intralinks exp</label>
    <type>Date</type>
</CustomField>