force-app/main/default/objects/Account/fields/Intralinks_notice__c.field-meta.xml
<CustomField>
    <fullName>Intralinks_notice__c</fullName>
    <description>Date at which client must notify Intralinks of their intent to terminate their contract.</description>
    <label>Intralinks notice</label>
    <type>Date</type>
</CustomField>