force-app/main/default/objects/Account/fields/Last_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Attempt__c</fullName>
    <description>Last communication attempt to the account.</description>
    <label>Last Attempt</label>
    <type>Date</type>
</CustomField>