force-app/main/default/objects/Account/fields/Last_Reach__c.field-meta.xml
<CustomField>
    <fullName>Last_Reach__c</fullName>
    <description>Last time words or emails were exchanged with the account</description>
    <label>Last Reach</label>
    <type>Date</type>
</CustomField>