force-app/main/default/objects/Account/fields/Loan_to_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Loan_to_Deposit__c</fullName>
    <label>Loan to Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>