force-app/main/default/objects/Account/fields/Major_Size__c.field-meta.xml
<CustomField>
    <fullName>Major_Size__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Major Size</label>
    <type>Checkbox</type>
</CustomField>