force-app/main/default/objects/Account/fields/NPA_TA__c.field-meta.xml
<CustomField>
    <fullName>NPA_TA__c</fullName>
    <label>NPA/TA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>