force-app/main/default/objects/Account/fields/Other_Deals__c.field-meta.xml
<CustomField>
    <fullName>Other_Deals__c</fullName>
    <label>Other Deals</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Number of other deal activities for the account</description>
</CustomField>