force-app/main/default/objects/Account/fields/Other_exp__c.field-meta.xml
<CustomField>
    <fullName>Other_exp__c</fullName>
    <description>Other syndication application expiration</description>
    <label>Debt Domain exp</label>
    <type>Date</type>
</CustomField>