force-app/main/default/objects/Account/fields/P2P__c.field-meta.xml
<CustomField>
    <fullName>P2P__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to distinguish accounts who are active in P2P lending or crowdfunding.</description>
    <label>P2P</label>
    <type>Checkbox</type>
</CustomField>