force-app/main/default/objects/Account/fields/PE_RE_Fund__c.field-meta.xml
<CustomField>
    <fullName>PE_RE_Fund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account is a private equity real estate fund manager</description>
    <label>PE RE Fund</label>
    <type>Checkbox</type>
</CustomField>