force-app/main/default/objects/Account/fields/Priority_Group__c.field-meta.xml
<CustomField>
    <fullName>Priority_Group__c</fullName>
    <formula>Case(left(Priority__c,1),&quot;5&quot;,&quot;500&quot;,&quot;6&quot;,&quot;600&quot;,&quot;7&quot;,&quot;700&quot;,&quot;&quot;)</formula>
    <label>Priority Group</label>
    <type>Text</type>
</CustomField>