force-app/main/default/objects/Account/fields/QIB_Certificate__c.field-meta.xml
<CustomField>
    <fullName>QIB_Certificate__c</fullName>
    <description>QIB Certificate?</description>
    <label>QIB Certificate?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>