force-app/main/default/objects/Account/fields/Reserves_NPA__c.field-meta.xml
<CustomField>
    <fullName>Reserves_NPA__c</fullName>
    <label>Reserves/NPA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>