force-app/main/default/objects/Account/fields/Site_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_Company_ID__c</fullName>
    <description>The CompanyID in the DebtX system corresponding to this Account record</description>
    <label>Site Company ID#</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>