force-app/main/default/objects/Account/fields/SNL_Institution_Key__c.field-meta.xml
<CustomField>
    <fullName>SNL_Institution_Key__c</fullName>
    <description>Institution Key from SNL</description>
    <externalId>true</externalId>
    <label>SNL Institution Key</label>
    <length>12</length>
    <type>Text</type>
</CustomField>