force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Customer - Lost</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Target A</fullName>
            </value>
            <value>
                <fullName>Target B</fullName>
            </value>
            <value>
                <fullName>Target C</fullName>
            </value>
            <value>
                <fullName>Target D</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>