force-app/main/default/objects/Account/fields/SyndTrak_exp__c.field-meta.xml
<CustomField>
    <fullName>SyndTrak_exp__c</fullName>
    <description>SyndTrak contract expiration date</description>
    <label>SyndTrak exp</label>
    <type>Date</type>
</CustomField>