force-app/main/default/objects/Account/fields/SyndTrak_notice__c.field-meta.xml
<CustomField>
    <fullName>SyndTrak_notice__c</fullName>
    <description>Date at which client must notify ACBS of their intent to terminate</description>
    <label>SyndTrak notice</label>
    <type>Date</type>
</CustomField>