force-app/main/default/objects/Account/fields/Target_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Type__c</fullName>
    <label>Target Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Trading</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>