force-app/main/default/objects/Account/fields/Top_25__c.field-meta.xml
<CustomField>
    <fullName>Top_25__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top 25</label>
    <type>Checkbox</type>
</CustomField>