force-app/main/default/objects/Account/fields/Users__c.field-meta.xml
<CustomField>
    <fullName>Users__c</fullName>
    <description>Number of DXProduct potential users</description>
    <label>Users</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>