force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Total_Assets__c</columns>
    <columns>ACCOUNT.TICKER</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <label>All Accounts</label>
</ListView>