force-app/main/default/objects/Account/listViews/Customer_Website_List.listView-meta.xml
<ListView>
    <fullName>Customer_Website_List</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>DXProduct__c</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Status__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <label>Customer Website List</label>
</ListView>